# machine-learning-traffic-redressement-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  package-lock.json  package.json  railway.toml
.claude/: settings.json
.claude/agents/: ai-architect.md  api-designer.md  cartography.md  code-reviewer.md  data-pipeline.md  database.md  deep-learning.md  devops.md  feature-engineering.md  gis-expert.md  ml-engineer.md  nextjs-frontend.md  performance.md  prompt-engineer.md  saas-architect.md  security.md  testing-expert.md  training-agent.md  ui-streamlit.md
.claude/commands/: deploy.md  fix-issue.md  review.md  security-audit.md
.claude/hooks/: check-hardcoded-paths.sh  check-imports.sh  guard-critical-files.sh  lint-after-edit.sh  (+1 more)
.github/: dependabot.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  auth.py  celery_app.py  config.py  error_messages.py  logging_config.py  main.py  rate_limit.py  security.py  session.py  tasks.py  training_guard.py
apps/api/app/middleware/: security_headers.py
apps/api/app/routers/: carte.py  compteurs.py  discontinuites.py  evaluation.py  evolution.py  export.py  mapping.py  models.py  sessions.py  training.py  upload.py  visualisation.py
apps/api/app/services/: discontinuites.py  geo.py
apps/api/app/services/evolution/: __init__.py  compute.py  io.py  matching.py  service.py
apps/api/app/services/ml/: __init__.py  data_prep.py  evaluation_pipeline.py  grid_search.py  inference.py  kfold.py  losses.py  metrics_advanced.py  model_builder.py  normalize.py  packaging.py  progress.py  rounding.py  saturation.py  seeding.py  stats_compare.py  training_pipeline.py  types.py
apps/api/app/services/reports/: __init__.py  html_peak.py  html_pl.py  html_tv.py
apps/api/scripts/: prepare_preview_data.py
apps/api/tests/: conftest.py  test_auth_flow.py  test_data_prep.py  test_discontinuites.py  test_evolution.py  test_grid_search.py  test_health.py  test_hpm_hps.py  test_imports_smoke.py  test_kfold.py  test_losses.py  test_mapping.py  test_metrics_advanced.py  test_model_builder.py  test_normalize.py  test_normalize_robust.py  test_ownership.py  test_packaging.py  test_rounding.py  test_routers_carte.py  test_routers_compteurs.py  test_routers_evaluation.py  test_routers_export.py  test_routers_models.py  test_routers_training.py  test_saturation_pl.py  test_security_headers.py  test_seeding.py  test_session.py  test_stats_compare.py  test_types.py  test_upload.py  test_visualisation.py  test_visualisation_sensors_alias.py  test_year_mapping.py
audit/: 01-security-backend.md  02-quality-python.md  03-quality-frontend.md  04-ml-pipeline.md  05-infra-devops.md  playwright-frontend-fixes.md  playwright-ml-review.md  playwright-pipeline-errors.md  refonte-lyon-audit.md
docs/: DEPLOYMENT.md  data-dictionary.md
infra/: .env.prod.example  Caddyfile  Dockerfile.api  Dockerfile.api.railway  Dockerfile.web  Dockerfile.web.railway  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml  nginx.conf
plans/: p1-backend-refacto.md  p2-frontend-refacto.md  p3-ui-redesign.md  p4-oracle-deploy.md
prototypes/: README.md  _video_inspect.html  landing-traffic-bg.html  landing-traffic-video-bg.html  login-night-video-bg.html
scripts/: README.md  deploy-railway.sh  enrich_fcdrefglobal.py  oracle-bootstrap.sh
(+558 files in other folders)
