[project]
name = "mdl-redressement-api"
version = "2.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "pandas>=2.1",
    "numpy>=1.24",
    "geopandas>=0.14",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "redis>=5.0",
    "celery[redis]>=5.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=1.40",
    "prometheus-fastapi-instrumentator>=6.1",
]

[project.optional-dependencies]
prod = [
    "tensorflow-cpu>=2.15,<2.22",
    "plotly>=5.18",
    "folium>=0.15",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
asyncio_mode = "auto"
