[project]
name = "mdl-redressement-api"
version = "2.0.0"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "pandas>=2.1",
    "numpy>=1.24",
    "geopandas>=1.1.3",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    # T2 cleanup: passlib[bcrypt] retire — bcrypt est utilise directement
    # par app.auth (hash_password / verify_password).
    # T2 cleanup: email-validator retire — couvert transitivement par
    # pydantic.EmailStr (FastAPI ramene pydantic[email] via fastapi[standard]).
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=1.40",
    "prometheus-fastapi-instrumentator>=6.1",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
prod = [
    "tensorflow-cpu>=2.15,<2.22",
    "plotly>=5.18",
    "folium>=0.15",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # B008: FastAPI idiom — `Depends()`, `File()`, `Form()`, `Query()` are
    # intentionally called in argument defaults (dependency injection).
    "B008",
    # E402: imports deliberately placed after the GPU-disable env setup
    # (`os.environ.setdefault("CUDA_VISIBLE_DEVICES", ...)` before importing
    # TensorFlow) and after route registration in main.py. Reordering them
    # would change runtime behavior.
    "E402",
    # E501: long lines are predominantly inline HTML/CSS f-string literals in
    # the report builders plus log/exception message strings; wrapping them
    # risks altering generated output. Black handles all safely-wrappable code.
    "E501",
]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
asyncio_mode = "auto"
